--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Francois Le Droff 's Blog</a>
+            <a class="navbar-brand" href="/">Francois Le Droff 's Blog has Moved</a>
 	    </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">                
@@ -60,7 +60,8 @@
 <p>I just moved this blog from
         <a href="http://francoisledroff.github.io/blog" class="bare">http://francoisledroff.github.io/blog</a>
         to <a href="http://francoisledroff.github.io" class="bare">http://francoisledroff.github.io</a> .
-        The new RSS feed is https://francoisledroff.github.io/feed.xml
+        <br>
+        The new RSS feed is <a href="https://francoisledroff.github.io/feed.xml" class="bare">https://francoisledroff.github.io/feed.xml</a>
       </p>
 
 </div></p>
