--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   <p><div class="paragraph">
 <p>I just moved this blog from
         <a href="http://francoisledroff.github.io/blog" class="bare">http://francoisledroff.github.io/blog</a>
-        to <a href="http://francoisledroff.github.io" class="bare">http://francoisledroff.github.io</a> .
-        <br>
-        The new RSS feed is <a href="https://francoisledroff.github.io/feed.xml" class="bare">https://francoisledroff.github.io/feed.xml</a>
+        to <a href="http://francoisledroff.github.io" class="bare">http://francoisledroff.github.io</a>.
+        The new RSS feed is <a href="https://francoisledroff.github.io/feed.xml" 
+        class="bare"> https://francoisledroff.github.io/feed.xml</a>
       </p>
 
 </div></p>
