--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
       <div class="container">
 
 
+
+  <div class="page-header">
+    
+  </div>
+
   <p><div class="paragraph">
 <p>I just moved this blog from
         <a href="http://francoisledroff.github.io/blog" class="bare">http://francoisledroff.github.io/blog</a>
